--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <html>
-<body>
-<p> this would be a paragraph<p/>
-<ul>
-<li> 1 </li>
-<li> 2</li>
-<li> 3</li>
-<li> 4</li>
-<li> 5</li>
-<li> 6</li>
-<li> 7</li>
-<li> 8</li>
-<li> 9</li>
-<li> 10</li>
-<li> ect.</li>
-<li> 100000</li>
+	<head>
+		<link rel="stylesheet" type="text/css" href="styles/styles.css">
+	</head>
+	<body>
+		<div class='awesome'>
+			hello
+			<div class='test'>
+			
+			</div>
+		</div>
+	</body>
+</html>
